@@ -3,6 +3,7 @@ Version: 1.8.4
 Date: ???
   Bugfixes:
     - Fixed being able to toggle into a spidertron in editor mode or Space Exploration's star map
+    - Fixed 'Call last used spidertron' shortcut being enabled before any interactions with spidertrons
 ---------------------------------------------------------------------------------------------------
 Version: 1.8.3
 Date: 17 February 2022
